syntax="proto3";

option go_package = "../service";

message ProductRequest{
    int32 pro_id = 1;
}

message ProductResponse{
    int32 prod_stock = 1;
}

service ProdService{

    rpc GetProdStock(ProductRequest) returns(ProductResponse);

}
//protoc --go_out=plugins=grpc:./ ./product.proto